force-app/main/default/objects/ringdna100__Agent_Stats__c/ringdna100__Agent_Stats__c.object-meta.xml
<CustomObject>
    <label>Agent Stat</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Agent Stats ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Stats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>