force-app/main/default/objects/ringdna100__Agent_Stats__c/fields/ringdna100__Date__c.field-meta.xml
<CustomField>
    <fullName>ringdna100__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>