force-app/main/default/objects/ringdna100__Agent_Stats__c/fields/ringdna100__Dials_1_Connect__c.field-meta.xml
<CustomField>
    <fullName>ringdna100__Dials_1_Connect__c</fullName>
    <formula>IF(ringdna100__Connects__c = 0, 0, ringdna100__Dials__c / ringdna100__Connects__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dials:1 Connect</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>