force-app/main/default/objects/ringdna100__Agent_Stats__c/fields/ringdna100__Dials__c.field-meta.xml
<CustomField>
    <fullName>ringdna100__Dials__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Dials</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>