force-app/main/default/objects/ringdna100__Agent_Stats__c/fields/ringdna100__Opp_1_Win__c.field-meta.xml
<CustomField>
    <fullName>ringdna100__Opp_1_Win__c</fullName>
    <formula>IF(ringdna100__Won_Opportunities__c = 0, 0, ringdna100__Opportunities__c /  ringdna100__Won_Opportunities__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp:1 Win</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>