force-app/main/default/objects/ringdna100__Agent_Stats__c/fields/ringdna100__User__c.field-meta.xml
<CustomField>
    <fullName>ringdna100__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SDR_Stats</relationshipName>
    <type>Lookup</type>
</CustomField>