force-app/main/default/objects/ringdna100__Agent_Stats__c/listViews/ringdna100__All.listView-meta.xml
<ListView>
    <fullName>ringdna100__All</fullName>
    <columns>NAME</columns>
    <columns>ringdna100__User__c</columns>
    <columns>ringdna100__Date__c</columns>
    <columns>ringdna100__Dials__c</columns>
    <columns>ringdna100__Connects__c</columns>
    <columns>ringdna100__Opportunities__c</columns>
    <columns>ringdna100__Won_Opportunities__c</columns>
    <columns>ringdna100__Dials_1_Connect__c</columns>
    <columns>ringdna100__Dials_1_Opp__c</columns>
    <columns>ringdna100__Dials_1_Win__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>