force-app/main/default/objects/ringdna100__Agent_Stats__c/listViews/ringdna100__All1.listView-meta.xml
<ListView>
    <fullName>ringdna100__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>